--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 <body>
 
-<h1>Work in progress, Hang Tight!</h1>
+<h1 title="Press Ctrl+W to wait faster">Work in progress, Hang Tight!</h1>
 
 </body>
 </html>
