--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
+<p>I'm working as fast as I can</p>
 
 </body>
 </html>
