--- a/sitemap.html
+++ b/sitemap.html
@@ -4,9 +4,9 @@
     <title>SITEMAP</title>
   </head>
 <body>
-    <a href="sitemap.html">Sitemap<br></a>
+    <p><a href="sitemap.html">Sitemap</a></p>
 
-    <a href="index.html">Index<br></a>
-    <a href="index.html" style="padding: 15px;">Index indented<br></a>
+    <p><a href="index.html">Index</a></p>
+    <p><a href="index.html" style="padding: 15px;">Index indented</a></p>
 </body>
 </html>
