First blog post!

--- a/sitemap.html
+++ b/sitemap.html
@@ -6,7 +6,10 @@
 <body>
     <p><a href="sitemap.html">Sitemap</a></p>
 
-    <p><a href="index.html">Index</a></p>
-    <p><a href="index.html" style="padding: 15px;">Index indented</a></p>
+    <p><a href="index.html">Homepage</a></p>
+    <p><a href="/blog/" style="padding: 15px;">Blog</a></p>
+    <p><a href="/blog/1/" style="padding: 30px;">Post 1</a></p>
+    
+    
 </body>
 </html>
