more folder crap

--- a/sitemap/sitemap.html
+++ b/sitemap/sitemap.html
@@ -4,9 +4,9 @@
     <title>SITEMAP</title>
   </head>
 <body>
-    <p><a href="sitemap.html">Sitemap</a></p>
+    <p><a href="/sitemap/">Sitemap</a></p>
 
-    <p><a href="index.html">Homepage</a></p>
+    <p><a href="/index/">Homepage</a></p>
     <p><a href="/blog/" style="padding: 15px;">Blog</a></p>
     <p><a href="/blog/1/" style="padding: 30px;">Post 1</a></p>
     
