--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -6,7 +6,7 @@
 <body>
     <p><a href="/sitemap/">Sitemap</a></p>
 
-    <p><a href="/index/">Homepage</a></p>
+    <p><a href="asherhausam.com">Homepage</a></p>
     <p><a href="/blog/" style="text-indent: 2 ch;">Blog</a></p>
     <p><a href="/blog/1/" style="text-indent: 10 px;">Post 1</a></p>
     
