Fix padding i hope

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -7,8 +7,8 @@
     <p><a href="/sitemap/">Sitemap</a></p>
 
     <p><a href="asherhausam.com">Homepage</a></p>
-    <p><a href="/blog/" style="text-indent: 2 ch;">Blog</a></p>
-    <p><a href="/blog/1/" style="text-indent: 10 px;">Post 1</a></p>
+    <p><a href="/blog/" style="padding-left: 10px;">Blog</a></p>
+    <p><a href="/blog/1/" style="padding-left: 20px;">Post 1</a></p>
     
     
 </body>
