Fixed homepage link

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -6,7 +6,7 @@
 <body>
     <p><a href="/sitemap/">Sitemap</a></p>
 
-    <p><a href="asherhausam.com">Homepage</a></p>
+    <p><a href="https//www.asherhausam.com">Homepage</a></p>
     <p><a href="/blog/" style="padding-left: 10px;">Blog</a></p>
     <p><a href="/blog/1/" style="padding-left: 20px;">Post 1</a></p>
     
