Added rpg tab and blog 2

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Asher Hausam - HOME</title>
   </head>
 <body>
+<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>
 
 <h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
 <p>I'm working as fast as I can</p>
-<a href="/sitemap/">Current Sitemap</a>
 </body>
 </html>
