--- a/rpg/index.html
+++ b/rpg/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>RPG</h1>
 <ul>
-    <li><p><a href="/D&amp;D/">D&amp;D 5e</a></p></li>
+    <li><p><a href="/DnD/">D&amp;D 5e</a></p></li>
 </ul>
     <p><a href="https://asherhausam.com"></a>back home</p>    
 </body>
