please let this work

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -7,7 +7,8 @@
 <body>
     <h1>RPG</h1>
 <ul>
-    <li><p><a href="../dnd/">D&amp;D 5e</a></p></li>
+    <li><p><a href="/dnd/">D&amp;D 5e</a></p></li>
+    <li><p><a href="../dnd/">..D&amp;D 5e</a></p></li>
 </ul>
     <p><a href="https://asherhausam.com"></a>back home</p>    
 </body>
