i really hope this works

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -9,6 +9,7 @@
 <ul>
     <li><p><a href="/dnd/">D&amp;D 5e</a></p></li>
     <li><p><a href="../dnd/">..D&amp;D 5e</a></p></li>
+    <li><p><a href="../rpg/dnd/">..rpgD&amp;D 5e</a></p></li>
 </ul>
     <p><a href="https://asherhausam.com"></a>back home</p>    
 </body>
