update to blog2

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -15,7 +15,7 @@
     <p><a href="../rpg/" style="padding-left: 10px;">rpg</a></p>
     <p><a href="../rpg/dnd/" style="padding-left: 20px;">D&amp;D</a></p>
     
-    <p><a href="https://asherhausam.com">Back home</a></p>
+    <p><br><a href="https://asherhausam.com">back home</a></p>
     
 </body>
 </html>
