--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Asher Hausam - HOME</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
 <p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>
