--- a/rpg/index.html
+++ b/rpg/index.html
@@ -10,7 +10,9 @@
     <li><p><a href="/dnd/">D&amp;D 5e</a></p></li>
     <li><p><a href="../dnd/">..D&amp;D 5e</a></p></li>
     <li><p><a href="../rpg/dnd/">..rpgD&amp;D 5e</a></p></li>
-</ul>
-    <p><a href="https://asherhausam.com"></a>back home</p>    
+</ul>    
 </body>
+<footer>
+    <p><a href="../">back</a> | <a href="https://asherhausam.com">back home</a></p>
+</footer>
 </html>
