--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
 <h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
 <p>I'm working as fast as I can</p>
 </body>
+<footer>
+    <p>Check my socials!</p>
+</footer>
 </html>
