--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <p>I'm working as fast as I can</p>
 </body>
 <footer>
-    <p>Check my socials!</p>
+    <p class ="light">Check my socials!</p>
 </footer>
 </html>
