--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p>I'm working as fast as I can</p>
 </body>
 <footer>
-    <p class ="light">Check my socials!</p>
+    <p class ="light centered">Check my socials!</p>
+    <p class ="light centered"><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a href="https://www.instagram.com/asherhausam/">Instagram</a></p>
 </footer>
 </html>
