--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </body>
 <footer>
     <p class ="light centered">Check my socials!</p>
-    <p class ="light centered"><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a href="https://www.instagram.com/asherhausam/">Instagram</a></p>
+    <p class ="centered"><a class="light" href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a class="light" href="https://www.instagram.com/asherhausam/">Instagram</a> | <a class="light" href="https://github.com/Daedalus1321">Github</a></p>
 </footer>
 </html>
