--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
   <head>
     <title>Asher Hausam - HOME</title>
     <link rel="stylesheet" href="style.css">
+  
+    
   </head>
 <body>
-<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>
+	<div class="head">
+	<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>
+	
+	</div>
+	
+	<h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
+	<p style="height:1000px;">I'm working as fast as I can</p>
 
-<h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
-<p>I'm working as fast as I can</p>
 </body>
 <footer>
+
     <p class ="light centered">Check my socials!</p>
     <p class ="centered"><a class="light" href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a class="light" href="https://www.instagram.com/asherhausam/">Instagram</a> | <a class="light" href="https://github.com/Daedalus1321">Github</a></p>
+
 </footer>
 </html>
