--- a/rpg/index.html
+++ b/rpg/index.html
@@ -7,9 +7,7 @@
 <body>
     <h1>RPG</h1>
 <ul>
-    <li><p><a href="/dnd/">D&amp;D 5e</a></p></li>
-    <li><p><a href="../dnd/">..D&amp;D 5e</a></p></li>
-    <li><p><a href="../rpg/dnd/">..rpgD&amp;D 5e</a></p></li>
+    <li><p><a href="../rpg/dnd/">D&amp;D 5e</a></p></li>
 </ul>    
 </body>
 <footer>
