--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Asher Hausam - HOME</title>
-    <link rel="stylesheet" href="style.css">
-  
-    
-  </head>
-<body>
-	<div class="head">
-	<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>
+<head>
 	
+	<title>Asher Hausam - HOME</title>
+	<link rel="stylesheet" href="style.css">
+	  
+</head>
+<body>
+	
+	<div class="head">
+		<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>	
 	</div>
 	
-	<h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
-	<p style="height:1000px;">I'm working as fast as I can</p>
-
+	
+	<div class="content">	
+		<div style="color:white; margin:auto;">
+		<h1 title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
+		</div>
+	</div>
+	
+	
+	<div class="footer">
+	    <p>Check my socials!</p>
+	    <p><a class="light" href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a class="light" href="https://www.instagram.com/asherhausam/">Instagram</a> | <a class="light" href="https://github.com/Daedalus1321">Github</a></p>    
+	</div>
+	
 </body>
-<footer>
-
-    <p class ="light centered">Check my socials!</p>
-    <p class ="centered"><a class="light" href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a class="light" href="https://www.instagram.com/asherhausam/">Instagram</a> | <a class="light" href="https://github.com/Daedalus1321">Github</a></p>
-
-</footer>
 </html>
