--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Asher Hausam - HOME</title>
 	
 	<link rel="stylesheet" href="https://asherhausam.com/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=tooltip_2" />
+    
 </head>
 <body>
 	
@@ -16,7 +16,7 @@
 	<div class="content">	
 		<div style="color:white; text-align:center;">
 		<h1 style="display:inline;" title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
-		<a style="display:inline; color:darkgrey;" title="Check my blog post!" href="../blog/1/"><span class="material-symbols-outlined"> tooltip_2 </span></a>
+		<a style="display:inline; color:darkgrey;" title="Check my blog post!" href="../blog/1/"><span class="mso"> search </span></a>
 		</div>
 	</div>
 	
