fixed google fonts icons

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 	<title>Asher Hausam - HOME</title>
-	
 	<link rel="stylesheet" href="https://asherhausam.com/style.css">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+    <link rel="stylesheet" href="style.css">
+    
     
 </head>
 <body>
@@ -19,7 +18,8 @@
 		<div style="color:white; text-align:center;">
 		<h1 style="display:inline;" title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
 		<!-- <a class="mso" style="color:darkgrey;"title="Check my blog post!"  href="../blog/1/"><span class="mso"> search </span></a> -->
-		<p><span style="font-size:20px;" class="mso">search</span></p>
+		<p><span style="font-size:60px;" class="material-symbols-outlined">search</span></p>
+		<p><span style="font-size:60px;" class="mso">search</span></p>
 		</div>
 	</div>
 	
