--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 		<div style="color:white; text-align:center;">
 		<h1 style="display:inline;" title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
 		<!-- <a class="mso" style="color:darkgrey;"title="Check my blog post!"  href="../blog/1/"><span class="mso"> search </span></a> -->
-		<p><span style="font-size:60px;" class="material-symbols-outlined">search</span></p>
-		<p><span style="font-size:60px;" class="mso">search</span></p>
+		<p><span class="mso size-20">search</span></p>
 		</div>
 	</div>
 	
