--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<div class="footer">
 	    <p>Check my socials!</p>
-	    <p><a class="light" href="https://www.linkedin.com/in/asher-hausam-208a2021a/">Linkedin</a> | <a class="light" href="https://www.instagram.com/asherhausam/">Instagram</a> | <a class="light" href="https://github.com/Daedalus1321">Github</a></p>    
+	    <p><a class="light" href="https://www.linkedin.com/in/asher-hausam-208a2021a/">LinkedIn</a> | <a class="light" href="https://www.instagram.com/asherhausam/">Instagram</a> | <a class="light" href="https://github.com/Daedalus1321">Github</a></p>    
 	</div>
 	
 </body>
