--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	
 	<div class="head">
-		<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a style="display:hidden" href="/rpg/">rpg</a></p>	
+		<p><a href="/sitemap/"><span class="mso">map</span>sitemap</a> | <a href="/blog/"><span class="mso">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/">rpg</a></p>	
 	</div>
 	
 	
