--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
 	
+	<!-- 
 	<div class="head">
 		<p><a href="/sitemap/">sitemap</a> | <a href="/blog/">blog</a> | <a href="/rpg/">rpg</a></p>	
 	</div>
-	
+	 -->
 	
 	<div class="content">	
-		<div style="color:white; text-align:center;">
+		<div style="color:rgb(20,20,20); text-align:center;">
 		<h1 style="display:inline;" title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
 		<!-- <a class="mso" style="color:darkgrey;"title="Check my blog post!"  href="../blog/1/"><span class="mso"> search </span></a> -->
-		<p><span class="mso size-20">mood</span></p>
+		<p><span style="font-size:80px" class="mso">mood</span></p>
 		</div>
 	</div>
 	
