--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	
 	<div class="footer">
-	    <p>Check my socials!</p>
+	    <p>Check out my socials!</p>
 	    <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso">code</span>Github</a></p>    
 	</div>
 	
