--- a/index.html
+++ b/index.html
@@ -9,24 +9,34 @@
 </head>
 <body>
 	
-	<!-- 
 	<div class="head">
-		<p><a href="/sitemap/"><span class="mso">map</span>sitemap</a> | <a href="/blog/"><span class="mso">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/">rpg</a></p>	
+		<p><a href="/sitemap/"><span class="mso link">map</span>sitemap</a> | <a href="/blog/"><span class="mso link">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso link">strategy</span>rpg</a></p>	
 	</div>
-	 -->
+	 
+	<div class="title">
+	   <table>
+	   <tr>
+	       <th colspan="2" class="name">WORK IN PROGRESS</td>
+	   </tr>
+	   <tr>
+	       <td class="date">2025/01/29</td>
+	       <td class="version">V0</td>
+       </tr>
+	   </table>
+	</div>
 	
 	<div class="content">	
 		<div style="color:rgb(20,20,20); text-align:center;">
-		<h1 style="display:inline;" title="Press Ctrl+R to wait faster">Work in progress, Hang Tight!</h1>
-		<!-- <a class="mso" style="color:darkgrey;"title="Check my blog post!"  href="../blog/1/"><span class="mso"> search </span></a> -->
-		<p><span style="font-size:100px" class="mso">mood</span></p>
+		<p>This is some lorem ipsum text. It should be quite readable<span style="width:1em;"></span> under any circumstance, and has a nice line width for reading.</p>
+		<h2>Overflow and header test</h2>
+		<p style="overflow-wrap: break-word">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
 		</div>
 	</div>
 	
 	
 	<div class="footer">
 	    <p>Check out my socials!</p>
-	    <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso">code</span>Github</a></p>    
+	    <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso link">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso link">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso link">code</span>Github</a></p>    
 	</div>
 	
 </body>
