--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="title">
 	   <table>
 	   <tr>
-	       <th colspan="2" class="name">WORK IN PROGRESS</td>
+	       <th colspan="2" class="name">WORK IN PROGRESS</th>
 	   </tr>
 	   <tr>
 	       <td class="date">2025/01/29</td>
