fix css for host

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	
 	<div class="head">
-		<p><a href="/sitemap/"><span class="mso link">map</span>sitemap</a> | <a href="/blog/"><span class="mso link">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso link">strategy</span>rpg</a></p>	
+		<p><a href="/sitemap/"><span class="mso fit">map</span>sitemap</a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>	
 	</div>
 	 
 	<div class="title">
@@ -26,17 +26,19 @@
 	</div>
 	
 	<div class="content">	
-		<div style="color:rgb(20,20,20); text-align:center;">
-		<p>This is some lorem ipsum text. It should be quite readable<span style="width:1em;"></span> under any circumstance, and has a nice line width for reading.</p>
-		<h2>Overflow and header test</h2>
-		<p style="overflow-wrap: break-word">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-		</div>
+		
+		<h2>Welcome!</h2>
+		
+		<p>Welcome to my website, I'm glad you're here!</p>
+		<p>It's currently quite the work in progress, but feel free to poke about while I'm working :)</p>
+		<p>Fair warning, however, there's a high chance things won't work as expected. Broken links, undecorated pages, etc!</p>
+		<p>If you find any bugs, keep them to yourself and pretend they never happened! <i>Definitely</i> don't click on anything looking like this: <a class="bug" href=""><span class="mso bug">bug_report</span></a>. Who knows what could happen.</p>
 	</div>
 	
 	
 	<div class="footer">
 	    <p>Check out my socials!</p>
-	    <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso link">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso link">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso link">code</span>Github</a></p>    
+	    <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso fit">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso fit">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso fit">code</span>Github</a></p>    
 	</div>
 	
 </body>
