--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	
 	<div class="head">
-		<p><a href="/sitemap/"><span class="mso fit">map</span>sitemap</a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>	
+		<p><a href="https://asherhausam.com"><span class="mso fit" >home</span></a> | <a href="/sitemap/"><span class="mso fit">map</span>sitemap</a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>	
 	</div>
 	 
 	<div class="title">
