--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title>Asher Hausam - HOME</title>
-	<link rel="stylesheet" href="https://asherhausam.com/style.css">
+	<link rel="stylesheet" href="https://asherhausam.com/style/blog-style.css">
     <link rel="stylesheet" href="style.css">
     
     
 </head>
 <body>
 	
-	<div class="head">
-		<p><a href="https://asherhausam.com"><span class="mso fit" >home</span></a> | <a href="/sitemap/"><span class="mso fit">map</span>sitemap</a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>	
-	</div>
+	<div class="head" id="top">
+        <p><a href="https://asherhausam.com"><span class="mso fit" >home</span></a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>   
+    </div>
 	 
 	<div class="title">
 	   <table>
@@ -37,8 +37,9 @@
 	
 	
 	<div class="footer">
-	    <p>Check out my socials!</p>
-	    <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso fit">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso fit">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso fit">code</span>Github</a></p>    
+	   <p>Check out my socials!</p>
+	   <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso fit">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso fit">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso fit">code</span>Github</a></p>    
+	   <p><a href="#top">top</a></p>
 	</div>
 	
 </body>
