--- a/404.html
+++ b/404.html
@@ -2,11 +2,27 @@
 <html>
 <head>
     <title>404</title>
+    <link rel="stylesheet" href="https://asherhausam.com/style/blog-style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>404</h1>
+
+<div class="head" id="top">
+    <p><a href="https://asherhausam.com"><span class="mso fit" >home</span></a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a style="display:hidden" href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>   
+</div>
+
+<div class="title">
+       <table>
+       <tr>
+           <th class="name">404</th>
+       </tr>
+       </table>
+    </div>
+
+<div class="content">
      <p>That wasn't supposed to happen...</p>
      <p>Try doing it again, but like, correctly this time</p>
+</div>
 </body>
 </html>
