fix reference to js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     
-    <script src = "../scripts/loadUpdatingContent.js"></script>
+    <script src = "https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
     <script>window.onload = update;</script>
 
 	<div class="head" id="top">
