updated links and header

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     
     <script src = "https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
+    <script src = "../scripts/loadUpdatingContent.js"></script>
+    
     <script>window.onload = update;</script>
 
 	<div class="head" id="top">
-        <p onload="update()" id="links"><a href="https://asherhausam.com"><span class="mso fit" >home</span></a> | <a href="/blog/"><span class="mso fit">menu_book</span>blog</a> | <a href="/rpg/"><span class="mso fit">strategy</span>rpg</a></p>   
+        <p onload="update()" id="top_bar"></p>
     </div>
 	 
 	<div class="title">
@@ -41,7 +43,7 @@
 	
 	<div class="footer">
 	   <p>Check out my socials!</p>
-	   <p><a href="https://www.linkedin.com/in/asher-hausam-208a2021a/"><span class="mso fit">work</span>LinkedIn</a> | <a href="https://www.instagram.com/asherhausam/"><span class="mso fit">photo_camera</span>Instagram</a> | <a href="https://github.com/Daedalus1321"><span class="mso fit">code</span>Github</a></p>
+	   <p id="socials"></p>
 	</div>
 	
 </body>
