--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 
     
-    <script src = "https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
-    <script src = "../scripts/loadUpdatingContent.js"></script>
+    <script src="https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
+    <script src="../scripts/loadUpdatingContent.js"></script>
     
-    <script>window.onload = update;</script>
+    <script>window.onload = updateLinks;</script>
 
 	<div class="head" id="top">
-        <p onload="update()" id="top_bar"></p>
+        <p id="top_bar"></p>
     </div>
 	 
 	<div class="title">
