--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Asher Hausam - HOME</title>
 	<link rel="stylesheet" href="https://asherhausam.com/style/blog-style.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/style.css">
     
 </head>
 <body>
@@ -20,9 +20,7 @@
 	 
 	<div class="title">
 	   <table>
-	   <tr>
-	       <th colspan="2" class="name">WORK IN PROGRESS</th>
-	   </tr>
+	   <tr><th colspan="2" class="name">WORK IN PROGRESS</th></tr>
 	   <tr>
 	       <td class="date">2025/01/29</td>
 	       <td class="version">V0</td>
