--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 	<div class="content">	
 		
-		<h2>Welcome!</h2>
+		<h2>Welcome! ;)</h2>
 		
 		<p>Welcome to my website, I'm glad you're here!</p>
 		<p>It's currently quite the work in progress, but feel free to poke about while I'm working :)</p>
