--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 
-    
     <script src="https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
-    <script src="../scripts/loadUpdatingContent.js"></script>
+    <script src="/scripts/loadUpdatingContent.js"></script>
     
     <script>window.onload = updateLinks;</script>
 
 	<div class="head" id="top">
-        <p id="top_bar"></p>
+        <p id="top_bar"><a href="https://asherhausam.com"><span class="mso fit" >home</span></a></p>
     </div>
 	 
 	<div class="title">
