--- a/ryanKey/index.html
+++ b/ryanKey/index.html
@@ -18,7 +18,7 @@
 
 
     <div class="content">
-        <p style="margin:auto;">Win 11 Home : NJHQV-DCB3F-RMMY2-69DGG-MKMK4</p>
+        <!--<p style="margin:auto;">Win 11 Home : NJHQV-DCB3F-RMMY2-69DGG-MKMK4</p>  -->
     </div>
 
     <div class="footer">
