--- a/404.html
+++ b/404.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>404</title>
-    <link rel="stylesheet" href="https://asherhausam.com/style/blog-style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://asherhausam.com/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-<script src="https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
+    <script src="https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
     <script src="/scripts/loadUpdatingContent.js"></script>
     <script>window.onload = updateLinks;</script>
 
