--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<p>Welcome to my website, I'm glad you're here!</p>
 		<p>It's currently quite the work in progress, but feel free to poke about while I'm working :)</p>
 		<p>Fair warning, however, there's a high chance things won't work as expected. Broken links, undecorated pages, etc!</p>
-		<p>If you find any bugs, keep them to yourself and pretend they never happened! <i>Definitely</i> don't click on anything looking like this: <a class="bug" href=""><span class="mso bug">bug_report</span></a>. Who knows what could happen.</p>
+		<p>If you find any bugs, keep them to yourself and pretend they never happened! <i>Definitely</i> don't click on anything looking like this: <a class="bug" href="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"><span class="mso bug">bug_report</span></a>. Who knows what could happen.</p>
 	</div>
 	
 	
