Updated 404 page link

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 
 <div class="content">
      <p>That wasn't supposed to happen...</p>
-     <p><a onclick="history.back()" style="text-decoration:underline;">Go Back and try again :)</a></p>
+     <p><a onclick="history.back()" style="cursor:pointer; text-decoration:underline;">Go Back and try again :)</a></p>
 </div>
 
 <div class="footer">
